# ecommerce-analytical-mcp-server

./: .env  .gitignore  README.md  pyproject.toml
app/: container.py  main.py
app/application/services/: analytics_service.py  ops_service.py  schema_service.py  seed_service.py  sql_service.py
app/config/: settings.py
app/infrastructure/db/: engine.py  reflection.py  sql_safety.py  tables.py  uow.py
app/presentation/: mcp_server.py
app/presentation/charts/: sales_dashboard.py
app/presentation/prompts/: prompts.py
app/presentation/tools/: analytics_tools.py  dashboard_tools.py  health_tools.py  ops_tools.py  schema_tools.py  seed_tools.py  sql_tools.py
